# oop-lectures

01_intro/tasks/: task_2.cpp  task_3.cpp
02_operators/presentations/: operators.md
02_operators/tasks/: task_3.cpp  task_4.cpp
03_ifs_and_loops/presentations/: ifs_and_loops.md
03_ifs_and_loops/tasks/ifs/: task_1.cpp  task_4.cpp
03_ifs_and_loops/tasks/loops/: task_5.cpp  task_6.cpp  task_7.cpp
04_arrays_strings_functions/presentations/: arrays_strings_funcs.md  arrays_strings_functions.md
05_pointers/presentations/: pointers.md
05_pointers/tasks/: task_2.cpp  task_5.cpp
06_vectors_hashmaps/presentations/: vectors_hashmaps.md
07_structs_classes/presentations/: structs_classes.md
07_structs_classes/tasks/: main.cpp
08_validation/mini_projects/: date_parser.cpp  menu.cpp  safe_div.cpp
08_validation/presentations/: validation.md
08_validation/tasks/: task_1.cpp  task_3.cpp  task_5.cpp
09_classes_basics/tasks/: task_2.cpp  task_3.cpp
10_dynamic_data_in_classes/presentations/: dynamic_data_in_classes.md
10_dynamic_data_in_classes/tasks/: task_1.cpp  task_3.cpp
11_code_organization/project/: README.md
13_abstraction/presentations/: abstraction.md
13_abstraction/project/: CMakeLists.txt
13_abstraction/project/src/: Phone.cpp
14_templates/project/: CMakeLists.txt
15_design_patterns/presentation/: desing_patterns.md
16_singleton/project/: CMakeLists.txt  README.md
16_solid_principles/presentation/: solid.md
16_solid_principles/project/: CMakeLists.txt
16_solid_principles/project/include/payments/: CashPayment.h  ConsoleReceiptPrinter.h  IPaymentMethod.h  PaymentProcessor.h
16_solid_principles/project/src/: CardPayment.cpp  CashPayment.cpp
17_factory/project/src/: main.cpp
17_singleton/presentation/: singleton.md
18_abstract_factory/presentation/: abstract_factory.md
18_abstract_factory/project/: CMakeLists.txt
18_abstract_factory/project/include/core/: GUIFactory.h  IButton.h  ICheckBox.h
18_abstract_factory/project/include/products/: MacButton.h  MacCheckBox.h  MacTextBox.h  WindowsButton.h  WindowsCheckBox.h
18_abstract_factory/project/src/: main.cpp
18_abstract_factory/project/src/factories/: MacFactory.cpp  WindowsFactory.cpp
18_abstract_factory/project/src/products/: MacButton.cpp  MacTextBox.cpp  WindowsTextBox.cpp
18_factory/presentation/: factory.md
18_factory/project/: CMakeLists.txt
18_factory/project/include/widgets/: CheckBox.h
19_builder/presentation/: builder.md
20_builder/conference_organization_system/: CMakeLists.txt
20_builder/conference_organization_system/include/builder/: EventBuilder.h  EventDirector.h  HybridEventBuilder.h
20_builder/conference_organization_system/include/domain/: Event.h
20_builder/conference_organization_system/src/builder/: ConferenceBuilder.cpp  EventFluentBuilder.cpp
20_builder/conference_organization_system/src/domain/: Event.cpp
21_adapter/payment_system/: CMakeLists.txt
21_adapter/payment_system/include/payment/: CryptoAdapter.h  PayPalAdapter.h  PaymentProcessor.h  PaymentProcessorFactory.h  StripeAdapter.h
21_adapter/payment_system/src/: main.cpp
21_adapter/payment_system/src/payment/: CryptoAdapter.cpp  PayPalAdapter.cpp  PaymentProcessorFactory.cpp  StripeAdapter.cpp
21_adapter/presentation/: adapter.md
22_decorator/decorator_text_editor/: CMakeLists.txt  README.md
22_decorator/decorator_text_editor/include/: BoldDecorator.hpp  ItalicDecorator.hpp  PlainText.hpp  ShadowDecorator.hpp  Text.hpp  TextDecorator.hpp  UnderlineDecorator.hpp
22_decorator/decorator_text_editor/src/: BoldDecorator.cpp  ItalicDecorator.cpp  PlainText.cpp  ShadowDecorator.cpp  TextDecorator.cpp  UnderlineDecorator.cpp  main.cpp
22_decorator/presentation/: decorador.md
23_dependency_injection/presentation/: dependency_injection.md
23_dependency_injection/project/: CMakeListst.txt
23_observer/observer_news/: CMakeLists.txt  README.md
23_observer/observer_news/app/: main.cpp
23_observer/observer_news/include/Observer/: IObserver.h  NewsAgency.h
23_observer/observer_news/include/Observers/: MobileApp.h  Radio.h  TVChannel.h  Website.h
23_observer/observer_news/src/Observer/: NewsAgency.cpp
23_observer/observer_news/src/Observers/: MobileApp.cpp  Radio.cpp  TVChannel.cpp  Website.cpp
23_observer/presentation/: observer.md
24_strategy/presentation/: strategy.md
24_strategy/strategy_sort/: CMakeLists.txt  main.cpp
24_strategy/strategy_sort/include/: SorterContext.h
24_strategy/strategy_sort/include/strategies/: BubbleSort.h  HeapSort.h  MergeSort.h  QuickSort.h  SortStrategy.h
24_strategy/strategy_sort/src/: SorterContext.cpp
24_strategy/strategy_sort/src/strategies/: BubbleSort.cpp  HeapSort.cpp  MergeSort.cpp  QuickSort.cpp
25_dependency_injection/presentation/: dependency_injection.md
homework_1/: task.md
homework_1_sample/: solution.md  task.md
test_1/: practice_sample.md  presentation.md  sample_variant_1.cpp  sample_variant_2.cpp  theory_answers.md  theory_questions.md
week_01/presentations/: intro.md
week_01/tasks/: task_1.cpp
week_02/tasks/: task_1.cpp  task_2.cpp
week_05/tasks/: task_1.cpp  task_3.cpp  task_4.cpp
week_08/mini_projects/: calculator.cpp  config_parser.cpp
week_08/tasks/: task_4.cpp
week_09/presentations/: classes_basics.md
week_09/tasks/: task_1.cpp  task_2.cpp  task_3.cpp
week_10/tasks/: task_2.cpp
week_11/presentations/: code_organization.md
week_11/project/: CMakeLists.txt
week_11/project/include/: MathUtils.h
week_11/project/src/: MathUtils.cpp
week_12/presentations/: inheritance.md
week_12/project/: CMakeLists.txt
week_12/project/include/: Circle.h
week_12/project/src/: Rectangle.cpp  main.cpp
week_13/presentations/: abstraction.md
week_14/presentations/: templates.md
(+93 files in other folders)
